@@ -260,13 +260,28 @@ int udrop(BW *bw)
 
 int udropon(BW *bw)
 {
-	prm(markk);
-	marking = 1;
-	if (marking && markb)
-		prm(markb);
-	else
-		umarkb(bw);
-	return 0;
+	if (markk) {
+		prm(markb); markb=0;
+		prm(markk); markk=0;
+		updall();
+		marking = 0;
+		return 0;
+	} else if (markb && markb->b==bw->cursor->b) {
+		marking = 0;
+		if (bw->cursor->byte<markb->byte) {
+			pdupown(markb, &markk);
+			prm(markb); markb=0;
+			pdupown(bw->cursor, &markb);
+			markb->xcol = bw->cursor->xcol;
+		} else {
+			pdupown(bw->cursor, &markk);
+			markk->xcol = bw->cursor->xcol;
+		}
+		return 0;
+	} else {
+		marking = 1;
+		return umarkb(bw);
+	}
 }
 
 int uselect(BW *bw)
